--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -68,7 +68,8 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="date" />
+            android:inputType="date"
+            android:focusable="false"/>
 
         <Spinner
             android:layout_width="30dp"
@@ -104,7 +105,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
+            android:digits="1234567890"
+            android:singleLine="true"
+            android:maxLength="19"
+            android:ems="9"
             android:inputType="number" />
 
         <EditText
@@ -113,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="numberDecimal" />
     </LinearLayout>
     <TextView
         android:id="@+id/textView12"
@@ -128,7 +132,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_margin="10dp"
-        android:id="@+id/idCliente"/>
+        android:id="@+id/nombre_prod"/>
 
     <TextView
         android:id="@+id/textView13"
@@ -143,7 +147,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_margin="10dp"
-        android:id="@+id/cantidad"/>
+        android:id="@+id/descripcion_prod"/>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
