--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -1,10 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout_index"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.Index">
+        android:fitsSystemWindows="true"
+        tools:context="com.example.Index"
+        tools:openDrawer="start">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view_index"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/header"
+            app:menu="@menu/main_menu"/>
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_index"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00008577"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:navigationIcon="@drawable/layout_menu"/>
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="171dp"
+                android:layout_gravity="center"
+                app:srcCompat="@mipmap/logo_cnelep"
+                android:id="@+id/imageView5"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="245dp"
+                android:layout_height="239dp"
+                android:layout_gravity="center"
+                android:src="@drawable/electricista"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#99000000"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" android:gravity="clip_horizontal|center"/>
+        <TextView
+                android:text="Bienvenido"
+                android:layout_width="match_parent"
+                android:layout_height="92dp"
+                android:id="@+id/textView10"
+                android:textSize="70dp"
+                android:fontFamily="@font/evelyn"
+                android:textStyle="bold"
+                android:textColor="#266ED5"
+                android:gravity="center"/>
+        <TextView
+                android:text=""
+                android:layout_width="match_parent"
+                android:layout_height="63dp"
+                android:id="@+id/text_view_user"
+                android:textSize="30dp"
+                android:fontFamily="@font/evelyn"
+                android:textStyle="bold"
+                android:textColor="#060606"
+                android:gravity="center"/>
+    </LinearLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
