--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,9 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/layout_home"
-            android:title="@string/menu_home" />
+                android:id="@+id/nav_home"
+                android:icon="@drawable/layout_home"
+                android:title="@string/menu_home"/>
+        <item
+                android:id="@+id/nav_inventario"
+                android:icon="@drawable/icon_inventario"
+                android:title="@string/menu_inventario"/>
+        <item
+            android:id="@+id/nav_registro_usuario"
+            android:icon="@drawable/icon_add_user"
+            android:title="@string/menu_add_usuarios"/>
     </group>
 
     <item android:title="@string/menu_contratos">
@@ -13,15 +21,15 @@
                 <item
                         android:id="@+id/item_orden"
                         android:icon="@drawable/icon_file"
-                        android:title="@string/contrato_ordenes" />
+                        android:title="@string/contrato_ordenes"/>
                 <item
                         android:id="@+id/item_bienes"
                         android:icon="@drawable/icon_check"
-                        android:title="@string/contrato_bienes" />
+                        android:title="@string/contrato_bienes"/>
                 <item
                         android:id="@+id/item_responsable"
                         android:icon="@drawable/icon_responsable"
-                        android:title="@string/contrato_responsable" />
+                        android:title="@string/contrato_responsable"/>
             </group>
         </menu>
     </item>
@@ -30,13 +38,13 @@
         <menu>
             <group android:checkableBehavior="single">
                 <item
-                    android:id="@+id/nav_perfil"
-                    android:icon="@drawable/layout_user_circle"
-                    android:title="@string/menu_profile" />
+                        android:id="@+id/nav_perfil"
+                        android:icon="@drawable/layout_user_circle"
+                        android:title="@string/menu_profile"/>
                 <item
-                    android:id="@+id/nav_configuration"
-                    android:icon="@drawable/layout_build"
-                    android:title="@string/menu_configuration" />
+                        android:id="@+id/nav_configuration"
+                        android:icon="@drawable/layout_build"
+                        android:title="@string/menu_configuration"/>
             </group>
         </menu>
     </item>
@@ -45,9 +53,9 @@
     <item android:title="@string/menu_comunication">
         <menu>
             <item
-                android:id="@+id/nav_about_us"
-                android:icon="@drawable/layout_about_us"
-                android:title="@string/menu_about_us" />
+                    android:id="@+id/nav_about_us"
+                    android:icon="@drawable/layout_about_us"
+                    android:title="@string/menu_about_us"/>
         </menu>
     </item>
 </menu>
