--- a/app/src/main/res/layout/activity_lista_productos.xml
+++ b/app/src/main/res/layout/activity_lista_productos.xml
@@ -32,10 +32,11 @@
         android:layout_width="160dp"
         android:layout_height="108dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/evelyn"
         android:gravity="center"
+        android:text="@string/tituloListaProd"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:text="@string/tituloListaProd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.828"
         app:layout_constraintStart_toStartOf="parent"
